# clip-decoder

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  settings.py
backend/app/api/: routes.py  sse.py
backend/app/nim/: client.py
backend/app/pipeline/: frame_analyzer.py  ingestor.py  lyrics_linker.py  orchestrator.py  palette.py  ref_proposer.py  shot_sampler.py  verifier.py  wikidata_enricher.py
backend/app/prompts/: frame_analyzer.md  loader.py  lyrics_linker.md  ref_proposer.md  ref_proposer_complement.md  verifier.md
backend/scripts/: seed_fixture.py
backend/tests/golden/: test_pipeline_golden.py
backend/tests/golden/fixtures/: frame_analyses_kubrick_clip.json  proposer_output_kubrick_clip.json
backend/tests/integration/: test_e2e.py  test_frames_endpoint.py
backend/tests/unit/: test_api.py  test_db.py  test_frame_analyzer.py  test_health.py  test_ingestor.py  test_lyrics_linker.py  test_models.py  test_nim_client.py  test_orchestrator.py  test_palette.py  test_prompts.py  test_ref_proposer.py  test_shot_sampler.py  test_sse_bus.py  test_verifier.py  test_wikidata_enricher.py
frontend/: .npmrc  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BrandLink.tsx  BrandMark.tsx  ConfidenceFilter.tsx  FilterBar.test.tsx  FilterBar.tsx  HeroForm.test.tsx  HeroForm.tsx  PipelineStatus.test.tsx  (+7 more)
(+52 files in other folders)
