[project]
name = "clipdecoder-backend"
version = "0.1.0"
description = "ClipDecoder backend: NIM-powered visual reference decoder for music videos"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "yt-dlp>=2025.1.15",
    "scenedetect[opencv]>=0.6.4",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.27",
    "openai>=1.55",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: integration tests requiring NVAPI_KEY"]
